# django-sage-painless

./: .coveragerc  .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  manage.py  requirements.txt  setup.cfg  setup.py  tox.ini
api/: admin.py  models.py
api/api/: serializers.py  urls.py  views.py
api/tests/: test_api.py  test_model.py
articles/: admin.py  models.py
articles/api/: serializers.py  urls.py  views.py
articles/tests/: test_api.py  test_model.py
docs/: conf.py  contribute.rst  diagram.rst  faq.rst  index.rst  quick_start.rst  usage.rst
generator/classes/: field.py  model.py  signal.py
generator/diagrams/: diagram.json  diagram.yml
generator/management/commands/: generate.py  generate_admin.py  generate_api.py  generate_model.py  (+1 more)
generator/services/: admin_generator.py  api_generator.py  docker_generator.py  jinja_service.py  json_service.py  model_generator.py  test_generator.py
generator/templates/: Dockerfile.txt  admin.txt  docker-compose.txt  models.txt  serializers.txt  test_api.txt  test_model.txt  urls.txt  views.txt
generator/utils/: jinja_service.py  pep8_service.py
kernel/: asgi.py  urls.py  wsgi.py
kernel/settings/: base.py  deployment.py  development.py  packages.py  secure.py
painless/: apps.py
painless/otp/: mixins.py  services.py  utils.py
products/: __init__.py  admin.py  apps.py  mixins.py  models.py  services.py  signals.py
products/api/: serializers.py  urls.py  views.py
products/models/: category.py  discount.py  product.py
products/tests/: test_api.py  test_category.py  test_discount.py  test_model.py  test_product.py
sage_painless/: apps.py
sage_painless/classes/: admin.py  field.py  model.py  signal.py
sage_painless/services/: abstract.py  admin_generator.py  api_generator.py  base.py  constants.py  docker_generator.py  gunicorn_generator.py  model_generator.py  nginx_generator.py  readme_generator.py  test_generator.py  tox_generator.py  uwsgi_generator.py
sage_painless/templates/: Dockerfile.jinja  Dockerfile.txt  README.jinja  README.txt  __init__.jinja  admin.jinja  admin.txt  apps.jinja  conf.jinja  conf.txt  coveragerc.jinja  docker-compose.jinja  docker-compose.txt  env.jinja  env.txt  mixins.jinja  mixins.txt  models.jinja  models.txt  nginx.jinja  nginx.txt  serializers.jinja  serializers.txt  services.jinja  services.txt  setup.jinja  setup.txt  signals.jinja  signals.txt  test.jinja  test.txt  test_api.jinja  test_api.txt  test_model.jinja  test_model.txt  tox.jinja  tox.txt  urls.jinja  urls.txt  uwsgi.jinja  (+3 more)
sage_painless/utils/: comment_service.py  file_service.py  git_service.py  jinja_service.py  json_service.py  package_manager_service.py  pep8_service.py  report_service.py  timing_service.py  yaml_service.py
sage_painless/validators/: diagram_validator.py  setting_validator.py
tests/: settings.py
tests/diagrams/: deploy_diagram.json  product_diagram.json
tests/fixtures/: deploy_fixture.json  product_fixture.json
tests/success/: test_admin_generator.py  test_api_generator.py  test_model_generator.py  test_readme_generator.py  test_test_generator.py
upload_center/: __init__.py  admin.py  apps.py  models.py  services.py  signals.py
upload_center/model_classes/: admin_model.py
upload_center/templates/: admin_template.txt
(+43 files in other folders)
