[metadata]
name = django-sage-painless
version = 0.1
description = create django projects without coding
long_description = file: README.rst
author = Sage Team
author_email = mail@sageteam.org
license = GNU  # Example license
url = 'https://github.com/sageteam-org/django-sage-painless',   # Provide either the link to your github or to your website
download_url = 'https://github.com/sageteam-org/django-sage-painless/archive/refs/tags/0.1.tar.gz',    # I explain this later on
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8

[requirements-files]
install_requires = requirements.txt